fix landscape mode on iphone x causing menu to be horizontal

--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -26,7 +26,7 @@
 
 /* Medium devices (landscape tablets, 768px and up) */
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and orientation: portrait {
 
   .nav {
     grid-auto-flow: column;
